rename to remove spaces in filename

--- a/matrix/index.html
+++ b/matrix/index.html
@@ -246,15 +246,15 @@
                             <div class="hover-content">
                                    <div class="image-container">
                                    <div class="image-container-multi">
-                                          <img src="https://raw.githubusercontent.com/jwfiedler/SL_Hawaii/main/output/SL_extremes_monthly_annual_maxima.png" alt="Annual Historical Extremes Plot"  >
+                                          <img src="https://raw.githubusercontent.com/jwfiedler/SL_Hawaii/main/output/SL_extremes_monthly_annual_maxima_Honolulu.png" alt="Annual Historical Extremes Plot"  >
                                           <div class="caption"><b>Figure XXX.</b> Annual and monthly extremes above MHHW for the Honolulu tide gauge. Colored horizontal lines indicate the 2,10,50 and 100 year return levels.</div>
                                    </div>
                                    <div class="image-container-multi">
-                                          <img src="https://raw.githubusercontent.com/jwfiedler/SL_Hawaii/main/output/SL_extremes_return_values.png" alt="Return Values Plot" width="300px" >
+                                          <img src="https://raw.githubusercontent.com/jwfiedler/SL_Hawaii/main/output/SL_extremes_return_values_Honolulu.png" alt="Return Values Plot" width="300px" >
                                           <div class="caption"><b>Figure XXX.</b> Return values plot, stationary station-based. Colored vertical lines indicate the 2,10,50 and 100 year return levels. </div>
                                    </div>
                                    <div class="image-container-multi">
-                                          <img src="https://raw.githubusercontent.com/jwfiedler/SL_Hawaii/main/output/SL_extremes_histogram_pp_qq.png" alt="Return Values Plot"  >
+                                          <img src="https://raw.githubusercontent.com/jwfiedler/SL_Hawaii/main/output/SL_extremes_histogram_pp_qq_Honolulu.png" alt="Return Values Plot"  >
                                           <div class="caption"><b>Figure XXX.</b> Histogram, pp, qq plots for stationary GEV at the Honolulu tide gauge. </div>
                                    </div>
                                    </div>
@@ -263,8 +263,8 @@
                         <div class="icon">
                             <img src='https://raw.githubusercontent.com/jwfiedler/SL_Hawaii/main/icons/table_icon_color_small.png'>
                             <div class="hover-content">
-                                <a href="https://raw.githubusercontent.com/jwfiedler/SL_Hawaii/main/output/SL_extremesHonolulu,Hawaii.csv" download>
-                                   <img src="https://raw.githubusercontent.com/jwfiedler/SL_Hawaii/main/output/SL_rankings_merge_Honolulu,Hawaii.png" alt="Annual Historical Extremes Table" height="400px" >
+                                <a href="https://raw.githubusercontent.com/jwfiedler/SL_Hawaii/main/output/SL_extremes_Honolulu.csv" download>
+                                   <img src="https://raw.githubusercontent.com/jwfiedler/SL_Hawaii/main/output/SL_rankings_merge_Honolulu.png" alt="Annual Historical Extremes Table" height="400px" >
                                </a>
                                <div class="caption"><b>Table XXX.</b> Extreme water levels, coupled with the 2,10,50, and 100 year return period water levels 
                                    for the Honolulu tide gauge, using nonstationary GEV analysis. See also <a href="https://pacificislandsflooding.org/observed-flooding?station-id=057&units=meters&threshold=030"> the Pacific Islands Flooding tool </a>: Extreme Water Levels table. </div>
