--- a/matrix/index.html
+++ b/matrix/index.html
@@ -923,12 +923,11 @@
                         <div class="icon">
                             <img src='https://raw.githubusercontent.com/jwfiedler/SL_Hawaii/main/icons/plot_icon_color_small.png'>
                             <div class="hover-content">
-                                <a href="placeholders/Picture11.jpg" download>
-                                    <img src="placeholders/Picture11.jpg" alt="Intra-Annual Historical Minor Flood Plot" >
-                                    </div>
-                                </a>
+                                    <img src="https://raw.githubusercontent.com/jwfiedler/SL_Hawaii/main/output/Honolulu_Hawaii_flood_days_intra_annual.png" alt="Intra-Annual Historical Minor Flood Plot" >
+                                <div class="caption"><b>Figure XXX</b> Table of sea level records exceeding a given threshold. The data are organized into years, and months. Each 'event' is considered a 'flooding day,' where at least one hour of that day exceeds the threshold. The monthly percentage shown at the bottom of the table is relative to the total number of flooding days (for all months and years in the record). </div>
                             </div>
                         </div>
+
                         <div class="icon">
                             <img src='https://raw.githubusercontent.com/jwfiedler/SL_Hawaii/main/icons/table_icon_small.png'>
                             <div class="hover-content">
