re-doing confidence interval calculations

--- a/matrix/index.html
+++ b/matrix/index.html
@@ -306,10 +306,10 @@
                         <div class="icon" >
                             <img src='https://raw.githubusercontent.com/jwfiedler/SL_Hawaii/main/icons/plot_icon_color_small.png'>
                             <div class="hover-content">
-                                <a href="https://raw.githubusercontent.com/jwfiedler/SL_Hawaii/main/output/extremes/TimeDependentReturnValue_57.png" download>
+                                <a href="plotly/TimeDependentReturnValue_57.html" >
                                     <img src="https://raw.githubusercontent.com/jwfiedler/SL_Hawaii/main/output/extremes/TimeDependentReturnValue_57.png" alt="Annual Historical Extremes Plot" >
                                 </a>
-                            <div class="caption"><b>Figure XXX.</b> Time series of the nonstationary GEV-based extreme water level return values for Honolulu. The monthly maxima (+) are displayed spanning data from 1993 to 2023. The return levels (at 2, 10, 50, and 100 year levels) are shown in solid lines. The 95% Confidence Interval (shaded area) also varies in time, and is shown only for the 2 year return level (**TBD**). Years 2008 and 2020 are highlighted on these curves to show the differences in values when taking seasonality, a long-term trend, and the 18.6 nodal-cycle into account. </div>
+                            <div class="caption"><b>Figure XXX.</b> Time series of the nonstationary GEV-based extreme water level return values for Honolulu. The monthly maxima (+) are displayed spanning data from 1993 to 2023. The return levels (at 2, 10, 50, and 100 year levels) are shown in solid lines. The 95% Confidence Interval (shaded area) also varies in time, and is shown only for the 2 and 10 year return levels. Years 2008 and 2020 are highlighted on these curves to show the differences in values when taking seasonality, a long-term trend, and the 18.6 nodal-cycle into account. </div>
     
                             </div>
                             
